--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="./style.css">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,6 @@
     <title>Microverse Hello</title>
 </head>
 <body>
-    <h6>Hello Microverse</h6>
+    <h1>Hello Microverse</h1>
 </body>
 </html>
